tests/neg/abstract-givens.check
-- Error: tests/neg/abstract-givens.scala:11:8 -------------------------------------------------------------------------
11 |  given s[T](using T): Seq[T] with // error
   |        ^
   |        instance cannot be created, since def iterator: => Iterator[A] is not defined 
-- Error: tests/neg/abstract-givens.scala:8:8 --------------------------------------------------------------------------
8 |  given y(using Int): String = summon[Int].toString * 22 // error
  |        ^
  |        error overriding method y in trait T of type (using x$1: Int): String;
  |          method y of type (using x$1: Int): String cannot override final member method y in trait T
-- Error: tests/neg/abstract-givens.scala:9:8 --------------------------------------------------------------------------
9 |  given z[T](using T): Seq[T] = List(summon[T]) // error
  |        ^
  |        error overriding method z in trait T of type [T](using x$1: T): List[T];
  |          method z of type [T](using x$1: T): Seq[T] has incompatible type
